--- a/Clicker/App.config
+++ b/Clicker/App.config
@@ -1,6 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Clicker.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <userSettings>
+        <Clicker.Properties.Settings>
+            <setting name="Interval1" serializeAs="String">
+                <value>1000</value>
+            </setting>
+            <setting name="Interval2" serializeAs="String">
+                <value>1000</value>
+            </setting>
+            <setting name="PositionX" serializeAs="String">
+                <value>200</value>
+            </setting>
+            <setting name="PositionY" serializeAs="String">
+                <value>200</value>
+            </setting>
+        </Clicker.Properties.Settings>
+    </userSettings>
 </configuration>
